--- a/CV/css/main.css
+++ b/CV/css/main.css
@@ -390,8 +390,8 @@ body {
       height: 4px;
       background-color: #fff;
       border-radius: 50%;
-      top: 2rem;
-      left: -16.5px; }
+      top: 3rem;
+      left: -1.5px; }
   .timeline__logo {
     color: #bcbcbc;
     font-weight: 100;
@@ -436,8 +436,7 @@ body {
     margin-bottom: 1rem; }
 
 .portfolio__item {
-  position: relative;
-  margin-bottom: 3rem; }
+  position: relative; }
 
 .portfolio__content {
   position: absolute;
@@ -471,7 +470,7 @@ body {
     transition: 0.4s; }
 
 .portfolio__text {
-  font-size: 4rem;
+  font-size: 3rem;
   background-image: linear-gradient(to right, #2998ff, #5643fa);
   -webkit-background-clip: text;
   background-clip: text;
@@ -480,7 +479,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 4;
+  z-index: 5;
   transition: 0.4s;
   opacity: 0; }
 
@@ -539,9 +538,14 @@ body {
   padding: 0 1.5rem;
   padding-bottom: 3rem; }
 
+.col-1-of-1 {
+  flex: 0 0 100%;
+  max-width: 100%; }
+
 .col-1-of-2 {
   flex: 0 0 50%;
-  max-width: 100%/2; }
+  max-width: 50%;
+  padding: 0; }
   @media only screen and (max-width: 900px) {
     .col-1-of-2 {
       flex: 0 0 100%;
@@ -549,7 +553,7 @@ body {
 
 .col-1-of-3 {
   flex: 0 0 33.33333%;
-  max-width: 100%/3; }
+  max-width: 33.33333%; }
 
 .col-1-of-4 {
   flex: 0 0 25%;
