--- a/HUC/sass/components/_form.scss
+++ b/HUC/sass/components/_form.scss
@@ -180,10 +180,10 @@
 .button-style{
     cursor: pointer;
     border-radius: 3px;
-    padding: 1rem 2rem;
+    padding: 1rem 3em;
     display: inline-block;
     color:#fff;
-    background-color:$color-primary;
+    background-color:$color-secondary;
     margin-left:1rem;
     margin-right:1rem;
     font-size:1.4rem;
