--- a/HUC/sass/layout/_navigation.scss
+++ b/HUC/sass/layout/_navigation.scss
@@ -11,7 +11,7 @@
     }
    &__list{
         display:flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         margin-left:5rem;
    }
