--- a/HUC/sass/base/_typography.scss
+++ b/HUC/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Baloo Tammudu 2', cursive;
+    font-family: 'Quicksand', sans-serif;
     font-weight: 400;
     font-size:$default-font-size;
 
