--- a/HUC/sass/components/_article.scss
+++ b/HUC/sass/components/_article.scss
@@ -35,10 +35,21 @@
     &__date{
         margin-top:auto;
     }
+    &__title{
+        @include textOverflow(2);
+        height:6rem;
+    }
+    &__description{
+        @include textOverflow(4);
+        height:11rem;
+    }
 
 }
 .article-small{
     display: flex;
+    @include screen(phone){
+        flex-wrap: wrap;
+    }
     &__img{
         flex: 0 0 45%;
         max-width: 45%;
@@ -51,6 +62,12 @@
             display: block;
             margin: 0 auto;
             object-fit: cover;
+        }
+        @include screen(phone){
+            flex: 0 0 100%;
+            max-width: 100%;
+            margin-right:0;
+            margin-bottom:1.5rem;
         }
     }
     &__content{
@@ -65,5 +82,9 @@
         top:2rem;
         right:2rem;
         box-shadow: 0rem 4rem 1.5rem rgba(#fff,0.8);
+    }
+    &__description{
+        @include textOverflow(4);
+        height:11rem;
     }
 }
