--- a/HUC/sass/components/_partner.scss
+++ b/HUC/sass/components/_partner.scss
@@ -39,6 +39,8 @@
         }
     }
     &__item:hover img{
-        transform: scale(1.2)
+        transform: scale(1.2);
+        -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+        filter: grayscale(0%);
     }
 }
