--- a/HUC/sass/components/_education.scss
+++ b/HUC/sass/components/_education.scss
@@ -9,6 +9,7 @@
     height:20rem;
     justify-content: space-around;
     transition:all 0.2s;
+    text-align: center;
     &__title{
         text-transform: uppercase;
         font-size:2rem;
@@ -16,7 +17,7 @@
     }
     &__icon{
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         align-items: center;
         i{
             font-size:6rem;
