--- a/HUC/sass/components/_slide.scss
+++ b/HUC/sass/components/_slide.scss
@@ -49,7 +49,7 @@
     width:100%;
     height:100%;
     -webkit-filter:grayscale(100%) opacity(70%);
-    filter:grayscale(100%) opacity(70%);
+    filter:grayscale(100%) opacity(90%) blur(1px);
     transition: 0.3s;
     top:0;
     left:0;
@@ -106,7 +106,7 @@
     &__link{
         color:$color-primary;
         text-transform: uppercase;
-        font-weight: 400;
+        font-weight: 700;
         letter-spacing: 5px;
         font-size:2rem;
         text-shadow: $shadow-dark;
