--- a/HUC/sass/layout/_body-content.scss
+++ b/HUC/sass/layout/_body-content.scss
@@ -1,13 +1,23 @@
 .body-content{
     display: flex;
+    flex-wrap: wrap;
 }
 .main-content{
     flex: 0 0 70%;
     max-width:70%;
     padding:1.5rem;
+    @include screen(tab-portrait){
+        flex: 0 0 100%;
+        max-width:100%;
+        margin-bottom: 2rem;
+    }
 }
 .side-bar{
     flex: 0 0 30%;
     max-width:30%;
     padding:0 1.5rem;
+    @include screen(tab-portrait){
+        flex: 0 0 100%;
+        max-width:100%;
+    }
 }
